# RNAz

./: .gitignore  AUTHORS  BUGS  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  configure.ac  dist.info  init-autotools.sh
doc/: custom.bst  l2hconf.pm  makedoc.pl  manual.bib  manual.tex
doc/figs/: formats.eps
examples/: IRE.aln  Makefile.am  miRNA.aln  tRNA.aln
librna/: Makefile.am  PS_dot.c  PS_dot.h  alifold.c  energy_par.c  fold.c  params.c  read_epars.c  utils.c
libsvm/: Makefile.am
man/: Makefile.am  RNAz.1  RNAz.1.in  RNAz.pod
models/: ConvertModel.pl  L50-200_GC20-30_avg.c  L50-200_GC20-30_avg.inc  L50-200_GC20-30_avg.model  L50-200_GC20-30_stdv.inc  L50-200_GC20-30_stdv.model  L50-200_GC30-36_avg.inc  L50-200_GC30-36_stdv.inc  L50-200_GC30-36_stdv.model  L50-200_GC36-40_avg.inc  L50-200_GC36-40_avg.model  L50-200_GC36-40_stdv.inc  L50-200_GC36-40_stdv.model  L50-200_GC40-46_avg.inc  L50-200_GC40-46_avg.model  L50-200_GC40-46_stdv.inc  L50-200_GC40-46_stdv.model  L50-200_GC46-50_avg.inc  L50-200_GC46-50_avg.model  L50-200_GC46-50_stdv.inc  L50-200_GC46-50_stdv.model  L50-200_GC50-56_avg.inc  L50-200_GC50-56_avg.model  L50-200_GC50-56_stdv.inc  L50-200_GC50-56_stdv.model  L50-200_GC56-60_avg.inc  L50-200_GC56-60_avg.model  L50-200_GC56-60_stdv.inc  L50-200_GC56-60_stdv.model  L50-200_GC60-66_avg.inc  L50-200_GC60-66_avg.model  L50-200_GC60-66_stdv.inc  L50-200_GC60-66_stdv.model  L50-200_GC66-70_avg.inc  L50-200_GC66-70_avg.model  L50-200_GC66-70_stdv.inc  L50-200_GC66-70_stdv.model  L50-200_GC70-80_avg.inc  L50-200_GC70-80_avg.model  L50-200_GC70-80_stdv.inc  (+14 more)
perl/: Makefile.am  RNAz.pm  alifoldz.pl  convertMaf.pl  extractMAFblock.pl  mafStats.pl  mpi.pl  rnazAnnotate.pl  rnazBEDsort.pl  rnazBEDstats.pl  rnazBlast.pl  rnazCMsearch.pl  rnazCluster.pl  rnazFilter.pl  rnazIndex.pl  rnazMAF2BED.pl  rnazMaf2Coordinates.pl  rnazMafRenumberMaf.pl  rnazMafSplit.pl  rnazOutputSort.pl  rnazRandomizeAln.pl  rnazSelectSeqs.pl  rnazSliceAlnByPos.pl  rnazSort.pl  rnazWindow.pl  rnazWindow_gq.pl  stats2plot.pl
rnaz/: Makefile.am  RNAz.c  avg.model  cmdline.c  cmdline.ggo  cmdline.h  rnaz_utils.c  rnaz_utils.h  strand.c  strand.h  svm_helper.c  svm_helper.h  zscore.c  zscore.h
