pkgbindir = $(pkgdatadir)/perl

pm_DATA=RNAz.pm

pmdir=$(pkgdatadir)/perl

pscript = randomizeAln.pl rnazBEDsort.pl rnazBlast.pl rnazFilter.pl rnazMAF2BED.pl rnazWindow.pl rnazAnnotate.pl rnazBEDstats.pl rnazCluster.pl rnazIndex.pl rnazSort.pl selectSeqs.pl

pkgbin_SCRIPTS = $(pscript) 

EXTRA_DIST = $(pscript) RNAz.pm


