pkgbindir = $(pkgdatadir)/perl

pm_DATA=RNAz.pm

pmdir=$(pkgdatadir)/perl

pscript = \
    convertMaf.pl \
    extractMAFblock.pl \
    mafStats.pl \
    mpi.pl \
    rnazAnnotate.pl \
    rnazBEDsort.pl \
    rnazBEDstats.pl \
    rnazBlast.pl \
    rnazCluster.pl \
    rnazCMsearch.pl \
    rnazFilter.pl \
    rnazIndex.pl \
    rnazMAF2BED.pl \
    rnazMaf2Coordinates.pl \
    rnazMafRenumberMaf.pl \
    rnazMafSplit.pl \
    rnazOutputSort.pl \
    rnazRandomizeAln.pl \
    rnazSelectSeqs.pl \
    rnazSliceAlnByPos.pl \
    rnazSort.pl \
    rnazWindow_gq.pl \
    rnazWindow.pl \
    stats2plot.pl \
    colorrna.pl \
    coloraln.pl

pkgbin_SCRIPTS = $(pscript) 

EXTRA_DIST = $(pscript) RNAz.pm


